rpmzig/rpmdb.h

typedef struct tdnf_rpm_file tdnf_rpm_file;
typedef struct tdnf_rpm_config tdnf_rpm_config;
typedef enum tdnf_rpm_scriptlet_outcome {
    TDNF_RPM_SCRIPTLET_OUTCOME_NOT_RUN = 0,
    TDNF_RPM_SCRIPTLET_OUTCOME_OK = 1,
    TDNF_RPM_SCRIPTLET_OUTCOME_EXITED = 2,
    TDNF_RPM_SCRIPTLET_OUTCOME_SIGNALED = 3,
} tdnf_rpm_scriptlet_outcome;
/* --- native trigger execution engine (T4 building block) --- */

typedef enum tdnf_rpm_trigger_phase {
    TDNF_RPM_TRIGGER_PHASE_TRIGGERIN = 0,
    TDNF_RPM_TRIGGER_PHASE_TRIGGERUN = 1,
    TDNF_RPM_TRIGGER_PHASE_TRIGGERPOSTUN = 2,
} tdnf_rpm_trigger_phase;
typedef struct tdnf_rpm_trigger_result {
    int ran;
    int critical;
    tdnf_rpm_scriptlet_outcome outcome;
    int exit_status;
    int signal_number;
} tdnf_rpm_trigger_result;
typedef enum tdnf_rpm_file_trigger_kind {
    TDNF_RPM_FILE_TRIGGER_KIND_PACKAGE = 0,
    TDNF_RPM_FILE_TRIGGER_KIND_TRANSACTION = 1,
} tdnf_rpm_file_trigger_kind;
typedef enum tdnf_rpm_trigger_priority_class {
    TDNF_RPM_TRIGGER_PRIORITY_ALL = 0,
    TDNF_RPM_TRIGGER_PRIORITY_HIGH = 1,
    TDNF_RPM_TRIGGER_PRIORITY_LOW = 2,
} tdnf_rpm_trigger_priority_class;
typedef struct tdnf_rpm_trigger_path {
    const char *path;
    const unsigned char *source_header_blob;
    size_t source_header_len;
} tdnf_rpm_trigger_path;
typedef struct tdnf_rpm_file_trigger_owner {
    const unsigned char *header_blob;
    size_t header_len;
    const tdnf_rpm_trigger_path *paths;
    size_t path_count;
    uint64_t order;
} tdnf_rpm_file_trigger_owner;
typedef struct tdnf_rpm_file_trigger_options {
    const char *install_root;
    const tdnf_rpm_config *config;
    int install_root_fd;
    uint32_t trans_flags;
    const char *const *rpmdefines;
    size_t rpmdefine_count;
    int script_fd;
    int redirect_stdout_to_stderr;
    int suppress_stdin;
} tdnf_rpm_file_trigger_options;
/**
 * Run a priority-sorted set of package or transaction file triggers.
 * Each owner supplies the phase-visible matching path set. One line is sent
 * to stdin for every matching prefix/path pair unless suppress_stdin is set
 * (used by %transfiletriggerpostun). Scripts receive `$1=0` and no `$2`.
 */
int tdnf_rpm_run_file_triggers(
    const tdnf_rpm_file_trigger_owner *owners,
    size_t owner_count,
    tdnf_rpm_trigger_phase phase,
    tdnf_rpm_file_trigger_kind kind,
    tdnf_rpm_trigger_priority_class priority_class,
    const tdnf_rpm_file_trigger_options *options,
    tdnf_rpm_trigger_result *result_out
);
/* --- native file erase engine (T4 building block) --- */

/**
 * Callback used by tdnf_rpm_erase_hnum() to decide whether `path`
 * must remain on disk for another package at the current transaction
 * phase.
 *
 * The callback should return:
 *   0  -> erase engine may remove/rename the path
 *   1  -> keep the path on disk
 *  <0  -> callback/query failure; abort erase
 *
 * `path` is the package-owned absolute path (for example
 * "/etc/foo.conf"), not rooted under `root`. `data` is the opaque
 * pointer from tdnf_rpm_erase_options.keep_path_fn_data.
 *
 * When no callback is supplied, the default implementation keeps
 * exact paths still owned by another installed package according to
 * the native rpmdb Basenames/Dirnames data. Multi-package erase
 * transactions with shared paths should provide an explicit callback
 * so later erase phases can keep shared files/directories until the
 * final owner is processed.
 */
typedef int (*tdnf_rpm_erase_keep_path_fn)(void *data, const char *path);
typedef struct tdnf_rpm_erase_options {
    /**
     * Optional handle-scoped rpm configuration. When supplied it is
     * authoritative for the rpmdb, install root, and native macros.
     */
    const tdnf_rpm_config *config;
    /**
     * librpm-style RPMTRANS_FLAG_* bitmask. The native erase engine
     * currently consults JUSTDB only.
     */
    uint32_t trans_flags;
    /**
     * Optional keep-path probe. May be NULL for plain single-package
     * erases that can rely on the default native rpmdb ownership
     * query.
     */
    tdnf_rpm_erase_keep_path_fn keep_path_fn;
    void *keep_path_fn_data;
} tdnf_rpm_erase_options;
/**
 * Erase on-disk files described by a raw stored header blob, under
 * `root`, without touching any rpmdb rows.
 *
 * Unlike tdnf_rpm_erase_hnum(), the header is supplied directly by
 * the caller. This is used on the UPGRADE path: after
 * tdnf_rpmdb_write_replace() has atomically overwritten the OLD
 * package's row with the NEW blob, the OLD hnum no longer resolves
 * to the OLD header, but the caller already captured that blob before
 * write_replace. Passing it back here removes any files unique to the
 * OLD version (files the NEW version does not ship).
 *
 * When no keep_path callback is supplied, the default probe queries
 * the live native rpmdb for any installed package that owns each
 * path. Because upgrade calls this AFTER write_replace, the rpmdb
 * reflects the NEW package's manifest at the replaced hnum, so paths
 * shared with the NEW version are naturally preserved.
 * When keep_path_fn is supplied, ownership queries are delegated entirely to
 * that callback and this function does not open the rpmdb in write mode.
 *
 * `options` may be NULL for defaults.
 *
 * Returns 0 on success, -1 on error (use tdnf_rpmdb_last_error()).
 */
int tdnf_rpm_erase_header_blob(
    const char *root,
    const unsigned char *blob,
    size_t blob_len,
    const tdnf_rpm_erase_options *options
);