include/tdnfrepomd.h

typedef struct _TDNF_PKG_INFO TDNF_PKG_INFO, *PTDNF_PKG_INFO;
typedef struct _TDNF_SOLVED_PKG_INFO
    TDNF_SOLVED_PKG_INFO, *PTDNF_SOLVED_PKG_INFO;
typedef struct _TDNF_REPOQUERY_ARGS TDNF_REPOQUERY_ARGS, *PTDNF_REPOQUERY_ARGS;
/*
 * A native transaction problem. Strings alias the containing plan and remain
 * valid until TDNFRepoMdNativeTransactionPlanFree().
 *
 * pszPackage is the package that raised the problem. pszRelatedPackage is
 * populated for package/file conflicts. pszSubject is the missing dependency,
 * conflicting path, or package name whose installed multiplicity is
 * unsupported.
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM
{
    TDNF_REPOMD_NATIVE_PROBLEM_TYPE nType;
    uint32_t dwInputIndex;
    const char *pszPackage;
    const char *pszRelatedPackage;
    const char *pszSubject;
    uint32_t dwCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM;
/*
 * Per-input execution metadata. Prior hnums are stored in the plan's flat
 * pdwPriorHnums array at [dwPriorOffset, dwPriorOffset + dwPriorCount).
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM
{
    uint32_t dwPriorOffset;
    uint32_t dwPriorCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM;
/*
 * One owned, validated native transaction plan. pdwOrderIndices is a complete
 * permutation of the original input indexes. pItems is indexed by original
 * input index and identifies the exact installed rows superseded by each
 * upgrade or reinstall.
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN
{
    uint32_t dwItemCount;
    uint32_t *pdwOrderIndices;
    TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM *pItems;
    uint32_t dwPriorHnumCount;
    uint32_t *pdwPriorHnums;
    uint32_t dwProblemCount;
    TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM *pProblems;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN;