abi/internal.zig

pub extern fn tdnf_rpm_run_file_triggers(owners: [*c]const tdnf_rpm_file_trigger_owner, owner_count: usize, phase: tdnf_rpm_trigger_phase, kind: tdnf_rpm_file_trigger_kind, priority_class: tdnf_rpm_trigger_priority_class, options: [*c]const tdnf_rpm_file_trigger_options, result_out: [*c]tdnf_rpm_trigger_result) c_int;
pub const tdnf_rpm_erase_keep_path_fn = ?*const fn (data: ?*anyopaque, path: [*c]const u8) callconv(.c) c_int;
pub const struct_tdnf_rpm_erase_options = extern struct {
    config: ?*const tdnf_rpm_config = null,
    trans_flags: u32 = 0,
    keep_path_fn: tdnf_rpm_erase_keep_path_fn = null,
    keep_path_fn_data: ?*anyopaque = null,
};
pub const tdnf_rpm_erase_options = struct_tdnf_rpm_erase_options;
pub extern fn tdnf_rpm_erase_header_blob(root: [*c]const u8, blob: [*c]const u8, blob_len: usize, options: [*c]const tdnf_rpm_erase_options) c_int;
pub const TDNF_PACKAGE_CONTEXT = struct__TDNF_PACKAGE_CONTEXT;
pub const struct__TDNF_REPO_METADATA = extern struct {
    pszRepoCacheDir: [*c]u8 = null,
    pszRepo: [*c]u8 = null,
    pszRepoMD: [*c]u8 = null,
    pszPrimary: [*c]u8 = null,
    pszFileLists: [*c]u8 = null,
    pszUpdateInfo: [*c]u8 = null,
    pszOther: [*c]u8 = null,
};
pub const TDNF_PLUGIN = struct__TDNF_PLUGIN_;
pub const TDNF = struct__TDNF_;
pub const struct__TDNF_CACHED_RPM_ENTRY = extern struct {
    pszFilePath: [*c]u8 = null,
    pNext: [*c]struct__TDNF_CACHED_RPM_ENTRY = null,
};
pub const TDNF_CACHED_RPM_ENTRY = struct__TDNF_CACHED_RPM_ENTRY;
pub const PTDNF_CACHED_RPM_ENTRY = [*c]struct__TDNF_CACHED_RPM_ENTRY;
pub const struct__TDNF_CACHED_RPM_LIST = extern struct {
    nSize: c_int = 0,
    pHead: PTDNF_CACHED_RPM_ENTRY = null,
};
pub const TDNF_CACHED_RPM_LIST = struct__TDNF_CACHED_RPM_LIST;
pub const PTDNF_CACHED_RPM_LIST = [*c]struct__TDNF_CACHED_RPM_LIST;
pub const TDNF_RPM_TS_ITEM_TYPE = c_uint;
pub const struct__TDNF_RPM_TS_ITEM = extern struct {
    nType: TDNF_RPM_TS_ITEM_TYPE = @import("std").mem.zeroes(TDNF_RPM_TS_ITEM_TYPE),
    pRpmFile: ?*tdnf_rpm_file = null,
    dwRpmDbHnum: u32 = 0,
    nPackageKind: c_int = 0,
    pszPath: [*c]u8 = null,
    pszName: [*c]u8 = null,
    pszEVR: [*c]u8 = null,
    pszArch: [*c]u8 = null,
    pNext: [*c]struct__TDNF_RPM_TS_ITEM = null,
};
pub const TDNF_RPM_TS_ITEM = struct__TDNF_RPM_TS_ITEM;
pub const PTDNF_RPM_TS_ITEM = [*c]struct__TDNF_RPM_TS_ITEM;
pub const struct__TDNF_RPM_TS_ = extern struct {
    nQuiet: c_int = 0,
    nTransFlags: TDNF_RPMTRANS_FLAGS = 0,
    pCachedRpmsArray: PTDNF_CACHED_RPM_LIST = null,
    dwTransactionItemCount: u32 = 0,
    pTransactionItems: PTDNF_RPM_TS_ITEM = null,
    pTransactionItemsTail: PTDNF_RPM_TS_ITEM = null,
    pNativePlan: [*c]TDNF_REPOMD_NATIVE_TRANSACTION_PLAN = null,
};
pub const TDNFRPMTS = struct__TDNF_RPM_TS_;
pub const TDNF_REPO_METADATA = struct__TDNF_REPO_METADATA;
pub extern fn create_cnfnode(name: [*c]const u8) [*c]struct_cnfnode;
pub extern fn create_cnfnode_keyval(keyval: [*c]const u8) [*c]struct_cnfnode;
pub extern fn cnfnode_getval(cn: [*c]const struct_cnfnode) [*c]const u8;
pub extern fn cnfnode_setval(cn: [*c]struct_cnfnode, value: [*c]const u8) void;
pub extern fn destroy_cnftree(cn: [*c]struct_cnfnode) void;
pub extern fn append_node(cn_parent: [*c]struct_cnfnode, cn: [*c]struct_cnfnode) void;
pub extern fn find_node(cn_list: [*c]struct_cnfnode, name: [*c]const u8) [*c]struct_cnfnode;
pub extern fn TDNFInit() u32;
pub extern fn TDNFOpenHandle(pArgs: PTDNF_CMD_ARGS, pTdnf: [*c]PTDNF) u32;
pub extern fn TDNFRefresh(pTdnf: PTDNF) u32;
pub extern fn TDNFCheckUpdates(pTdnf: PTDNF, ppszPackageNameSpecs: [*c][*c]u8, ppPkgInfo: [*c]PTDNF_PKG_INFO, pdwCount: [*c]u32) u32;
pub extern fn TDNFClean(pTdnf: PTDNF, nCleanType: u32) u32;
pub extern fn TDNFList(pTdnf: PTDNF, nScope: TDNF_SCOPE, ppszPackageNameSpecs: [*c][*c]u8, ppPkgInfo: [*c]PTDNF_PKG_INFO, pdwCount: [*c]u32) u32;
pub extern fn TDNFInfo(pTdnf: PTDNF, nScope: TDNF_SCOPE, ppszPackageNameSpecs: [*c][*c]u8, ppPkgListInfo: [*c]PTDNF_PKG_INFO, pdwCount: [*c]u32) u32;
pub extern fn TDNFRepoList(pTdnf: PTDNF, nFilter: TDNF_REPOLISTFILTER, ppRepoData: [*c]PTDNF_REPO_DATA) u32;
pub extern fn TDNFCheckPackages(pTdnf: PTDNF) u32;
pub extern fn TDNFCheckLocalPackages(pTdnf: PTDNF, pszLocalPath: [*c]const u8) u32;
pub extern fn TDNFProvides(pTdnf: PTDNF, pszSpec: [*c]const u8, ppPkgInfo: [*c]PTDNF_PKG_INFO) u32;
pub extern fn TDNFRepoSync(pTdnf: PTDNF, pReposyncArgs: PTDNF_REPOSYNC_ARGS) u32;
pub extern fn TDNFRepoQuery(pTdnf: PTDNF, pRepoqueryArgs: PTDNF_REPOQUERY_ARGS, ppPkgInfo: [*c]PTDNF_PKG_INFO, pdwCount: [*c]u32) u32;
pub extern fn TDNFUpdateInfo(pTdnf: PTDNF, ppszPackageNameSpecs: [*c][*c]u8, ppUpdateInfo: [*c]PTDNF_UPDATEINFO) u32;
pub extern fn TDNFUpdateInfoSummary(pTdnf: PTDNF, ppszPackageNameSpecs: [*c][*c]u8, ppSummary: [*c]PTDNF_UPDATEINFO_SUMMARY) u32;
pub extern fn TDNFHistoryResolve(pTdnf: PTDNF, pHistoryArgs: PTDNF_HISTORY_ARGS, ppSolvedPkgInfo: [*c]PTDNF_SOLVED_PKG_INFO) u32;
pub extern fn TDNFHistoryList(pTdnf: PTDNF, pHistoryArgs: PTDNF_HISTORY_ARGS, ppHistoryInfo: [*c]PTDNF_HISTORY_INFO) u32;
pub extern fn TDNFGetPackageUrls(pTdnf: PTDNF, pSolvedPkgInfo: PTDNF_SOLVED_PKG_INFO, pppszUrls: [*c][*c][*c]u8, pnCount: [*c]c_int) u32;
pub extern fn TDNFHistoryGetId(pTdnf: PTDNF, pnId: [*c]c_int) u32;
pub extern fn TDNFCountCommand(pTdnf: PTDNF, pdwCount: [*c]u32) u32;
pub extern fn TDNFGetVersion() [*c]const u8;
pub extern fn TDNFGetPackageName() [*c]const u8;
pub extern fn TDNFSearchCommand(pTdnf: PTDNF, pCmdArgs: PTDNF_CMD_ARGS, ppPkgInfo: [*c]PTDNF_PKG_INFO, pdwCount: [*c]u32) u32;
pub extern fn TDNFResolve(pTdnf: PTDNF, nAlterType: TDNF_ALTERTYPE, ppSolvedPkgInfo: [*c]PTDNF_SOLVED_PKG_INFO) u32;
pub extern fn TDNFTransactionPlanSetEnabled(pTdnf: PTDNF, dwEnabled: u32) u32;
pub extern fn TDNFTransactionPlanResolveCanonicalJson(pTdnf: PTDNF, ppszCmds: [*c][*c]u8, dwCmdCount: u32, ppszJson: [*c][*c]u8) u32;
pub extern fn TDNFTransactionPlanGetCanonicalJson(pTdnf: PTDNF, ppszJson: [*c][*c]u8) u32;
pub extern fn TDNFTransactionPlanFreeCanonicalJson(pszJson: [*c]u8) void;
pub extern fn TDNFAlterCommand(pTdnf: PTDNF, pSolvedInfo: PTDNF_SOLVED_PKG_INFO) u32;
pub extern fn TDNFAlterHistoryCommand(pTdnf: PTDNF, pSolvedInfo: PTDNF_SOLVED_PKG_INFO, pHistoryArgs: PTDNF_HISTORY_ARGS) u32;
pub extern fn TDNFMark(pTdnf: PTDNF, ppszPackageNameSpecs: [*c][*c]u8, dwValue: u32) u32;
pub extern fn TDNFGetErrorString(dwErrorCode: u32, ppszErrorString: [*c][*c]u8) u32;
pub extern fn TDNFCloseHandle(pTdnf: PTDNF) void;
pub extern fn TDNFFreeCmdArgs(pCmdArgs: PTDNF_CMD_ARGS) void;
pub extern fn TDNFFreePackageInfo(pPkgInfo: PTDNF_PKG_INFO) void;
pub extern fn TDNFFreePackageInfoArray(pPkgInfo: PTDNF_PKG_INFO, dwLength: u32) void;
pub extern fn TDNFFreeRepos(pRepos: PTDNF_REPO_DATA) void;
pub extern fn TDNFFreeSolvedPackageInfo(pSolvedPkgInfo: PTDNF_SOLVED_PKG_INFO) void;
pub extern fn TDNFFreeUpdateInfo(pUpdateInfo: PTDNF_UPDATEINFO) void;
pub extern fn TDNFFreeUpdateInfoSummary(pSummary: PTDNF_UPDATEINFO_SUMMARY) void;
pub extern fn TDNFFreeHistoryInfo(pHistoryInfo: PTDNF_HISTORY_INFO) void;
pub extern fn TDNFUninit() void;
pub const HTDNF = ?*anyopaque;
pub const PTDNF_CLI_CONTEXT = [*c]struct__TDNF_CLI_CONTEXT_;
pub const PFN_TDNF_ALTER = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_SOLVED_PKG_INFO) callconv(.c) u32;
pub const PFN_TDNF_CHECK_LOCAL = ?*const fn (PTDNF_CLI_CONTEXT, [*c]const u8) callconv(.c) u32;
pub const PFN_TDNF_CHECK_UPDATE = ?*const fn (PTDNF_CLI_CONTEXT, [*c][*c]u8, [*c]PTDNF_PKG_INFO, [*c]u32) callconv(.c) u32;
pub const PFN_TDNF_CHECK = ?*const fn (PTDNF_CLI_CONTEXT) callconv(.c) u32;
pub const PFN_TDNF_CLEAN = ?*const fn (PTDNF_CLI_CONTEXT, u32) callconv(.c) u32;
pub const PFN_TDNF_COUNT = ?*const fn (PTDNF_CLI_CONTEXT, [*c]u32) callconv(.c) u32;
pub const struct__TDNF_LIST_ARGS = extern struct {
    nScope: TDNF_SCOPE = @import("std").mem.zeroes(TDNF_SCOPE),
    ppszPackageNameSpecs: [*c][*c]u8 = null,
};
pub const PTDNF_LIST_ARGS = [*c]struct__TDNF_LIST_ARGS;
pub const PFN_TDNF_INFO = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_LIST_ARGS, [*c]PTDNF_PKG_INFO, [*c]u32) callconv(.c) u32;
pub const PFN_TDNF_LIST = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_LIST_ARGS, [*c]PTDNF_PKG_INFO, [*c]u32) callconv(.c) u32;
pub const PFN_TDNF_PROVIDES = ?*const fn (PTDNF_CLI_CONTEXT, [*c]const u8, [*c]PTDNF_PKG_INFO) callconv(.c) u32;
pub const PFN_TDNF_REPOLIST = ?*const fn (PTDNF_CLI_CONTEXT, TDNF_REPOLISTFILTER, [*c]PTDNF_REPO_DATA) callconv(.c) u32;
pub const PFN_TDNF_REPOSYNC = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_REPOSYNC_ARGS) callconv(.c) u32;
pub const PFN_TDNF_REPOQUERY = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_REPOQUERY_ARGS, [*c]PTDNF_PKG_INFO, [*c]u32) callconv(.c) u32;
pub const PFN_TDNF_RESOLVE = ?*const fn (PTDNF_CLI_CONTEXT, TDNF_ALTERTYPE, [*c]PTDNF_SOLVED_PKG_INFO) callconv(.c) u32;
pub const PFN_TDNF_SEARCH = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_CMD_ARGS, [*c]PTDNF_PKG_INFO, [*c]u32) callconv(.c) u32;
pub const struct__TDNF_UPDATEINFO_ARGS = extern struct {
    nMode: TDNF_UPDATEINFO_OUTPUT = @import("std").mem.zeroes(TDNF_UPDATEINFO_OUTPUT),
    nScope: TDNF_SCOPE = @import("std").mem.zeroes(TDNF_SCOPE),
    nType: TDNF_UPDATEINFO_TYPE = @import("std").mem.zeroes(TDNF_UPDATEINFO_TYPE),
    ppszPackageNameSpecs: [*c][*c]u8 = null,
};
pub const PTDNF_UPDATEINFO_ARGS = [*c]struct__TDNF_UPDATEINFO_ARGS;
pub const PFN_TDNF_UPDATEINFO = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_UPDATEINFO_ARGS, [*c]PTDNF_UPDATEINFO) callconv(.c) u32;
pub const PFN_TDNF_UPDATEINFO_SUMMARY = ?*const fn (PTDNF_CLI_CONTEXT, TDNF_AVAIL, PTDNF_UPDATEINFO_ARGS, [*c]PTDNF_UPDATEINFO_SUMMARY) callconv(.c) u32;
pub const PFN_TDNF_HISTORY_CMD = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_HISTORY_ARGS, [*c]PTDNF_HISTORY_INFO) callconv(.c) u32;
pub const PFN_TDNF_HISTORY_RESOLVE_CMD = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_HISTORY_ARGS, [*c]PTDNF_SOLVED_PKG_INFO) callconv(.c) u32;
pub const PFN_TDNF_ALTER_HISTORY = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_SOLVED_PKG_INFO, PTDNF_HISTORY_ARGS) callconv(.c) u32;
pub const PFN_TDNF_MARK_COMMAND = ?*const fn (pContext: PTDNF_CLI_CONTEXT, ppszPkgNameSpecs: [*c][*c]u8, nValue: u32) callconv(.c) u32;
pub const PFN_TDNF_GET_PKG_URLS = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_SOLVED_PKG_INFO, [*c][*c][*c]u8, [*c]c_int) callconv(.c) u32;
pub const PFN_TDNF_HISTORY_GET_ID = ?*const fn (PTDNF_CLI_CONTEXT, [*c]c_int) callconv(.c) u32;
pub const struct__TDNF_CLI_CONTEXT_ = extern struct {
    hTdnf: HTDNF = null,
    pUserData: ?*anyopaque = null,
    pFnAlter: PFN_TDNF_ALTER = null,
    pFnCheckLocal: PFN_TDNF_CHECK_LOCAL = null,
    pFnCheckUpdate: PFN_TDNF_CHECK_UPDATE = null,
    pFnCheck: PFN_TDNF_CHECK = null,
    pFnClean: PFN_TDNF_CLEAN = null,
    pFnCount: PFN_TDNF_COUNT = null,
    pFnInfo: PFN_TDNF_INFO = null,
    pFnList: PFN_TDNF_LIST = null,
    pFnProvides: PFN_TDNF_PROVIDES = null,
    pFnRepoList: PFN_TDNF_REPOLIST = null,
    pFnRepoSync: PFN_TDNF_REPOSYNC = null,
    pFnRepoQuery: PFN_TDNF_REPOQUERY = null,
    pFnResolve: PFN_TDNF_RESOLVE = null,
    pFnSearch: PFN_TDNF_SEARCH = null,
    pFnUpdateInfo: PFN_TDNF_UPDATEINFO = null,
    pFnUpdateInfoSummary: PFN_TDNF_UPDATEINFO_SUMMARY = null,
    pFnHistoryList: PFN_TDNF_HISTORY_CMD = null,
    pFnHistoryResolve: PFN_TDNF_HISTORY_RESOLVE_CMD = null,
    pFnAlterHistory: PFN_TDNF_ALTER_HISTORY = null,
    pFnMark: PFN_TDNF_MARK_COMMAND = null,
    pFnGetPackageUrls: PFN_TDNF_GET_PKG_URLS = null,
    pFnHistoryGetId: PFN_TDNF_HISTORY_GET_ID = null,
};
pub const PFN_CMD = ?*const fn (PTDNF_CLI_CONTEXT, PTDNF_CMD_ARGS) callconv(.c) u32;
pub const struct__TDNF_CLI_CMD_MAP = extern struct {
    pszCmdName: [*c]const u8 = null,
    pFnCmd: PFN_CMD = null,
    ReqRoot: bool = false,
};
pub const TDNF_CLI_CMD_MAP = struct__TDNF_CLI_CMD_MAP;
pub const TDNF_LIST_ARGS = struct__TDNF_LIST_ARGS;
pub const TDNF_UPDATEINFO_ARGS = struct__TDNF_UPDATEINFO_ARGS;
pub const TDNF_CLI_CONTEXT = struct__TDNF_CLI_CONTEXT_;
